syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.chat";
option java_outer_classname = "ChatProto";

package chat;

service ChatService {
  rpc JoinChat(stream ChatMessage) returns (stream ChatMessage) {}
}

message ChatMessage {
  string user_name = 1;
  string message = 2;
}